# ai-coding-aider

./: .gitignore  arg_parse.ts  chart.ts  dataTypes.ts  director.py  director.ts  lesson-3-idk.md  lesson-3.md  lesson-5-spec.md  lesson-5.md  lesson-6-adw.md  llm.ts  main.py  main.ts  package-lock.json  package.json  pyproject.toml  readme-l5-spec-based.md  readme-l6-adw.md  readme-l7-director.md  transcript-2.txt  transcript-3.txt  transcript.txt  transcript_analysis.html  transcript_analysis.md  transcript_analysis.txt  transcript_analysis.yaml  tsconfig.json
adw/: newChartType.ts  new_chart.py  new_output_type.py  new_output_type.ts  versioning.py  versioning.ts
lesson-transcripts/: lesson-4-pitfalls.md  lesson-5-spec.md  lesson-6-adw.md  lesson-7-directors-loop.md
let_the_code_write_itself/: CLARIFY_outputFormatGreen.md  chartSpec.ts  dataTypesSpec.ts  llmSpec.ts  mainSpec.ts  outputFormatSpec.ts  wordCounterSpec.ts
readme's/: readme.md
spec/: director_green_output_format-py.yaml  director_green_output_format.yaml  l7-director_slider_output_format_two_charts-py.yaml  l7-director_slider_output_format_two_charts.yaml  l7-spec-feature_new_slider_html_output_and_charts-py.md  l7-spec-feature_new_slider_html_output_and_charts.md  new-chart-type.md  new_chart_type-py.md  spec-template.md  transcript-analytics-v0-python.md  transcript-analytics-v0.md  transcript-analytics-v1-python.md  transcript-analytics-v1.md
spec_based_ai_coding/: chartSpec.ts  constantsSpec.ts  mainSpec.ts  outputFormatSpec.ts  spec-main.ts
src/: arg_parse.ts  chart.ts  constants.ts  main.ts  (+1 more)
(+2 files in other folders)
