[project]
name = "aider_has_a_secret"
version = "0.1.12"
description = "Add your description here"
readme = "README.md"
authors = [
{ name = "indydevdan", email = "agentic@indydevdan.com" }
requires-python = ">=3.12"
dependencies = [
"matplotlib==3.9.2",
"openai==1.53.0",


"pydantic==2.9.2",


"python-dotenv==1.0.1",
"pyyam l==6.0.2",

wrich>=13.5.2"，

"typer==0.12.5",

"flask==3.0.3",


"aider-chat==0.62.1",
[build-system]
requires = ["hatchling"]
build-backend = "hatchling-build"
[project.scripts]
main = "aider_has_a_secret-main:main"
server = "aider_has_a_secret.server:main"